# buddha_chess

./: .gitignore  Readme.md  _django.env  boadr.html  board_12.html  board_dinamik.html  bourd_12_wist_zone.html  pyproject.toml  start_daphne.sh  timer.html  фибоначи
apps/article/: admin.py  api.py  apps.py  models.py  schemas.py  urls.py
apps/base/: views.py
apps/game/: admin.py  apps.py  consumers.py  models.py  routing.py
apps/users/: __init__.py  admin.py  apps.py  models.py  urls.py
board/: board.html  script.js  style.css
config/: asgi.py  settings.py  urls.py
docs/: Правила игры в Будиские шахматы.doc  Черновик Правил игры в Будиские шахматы.doc
drag_drop/: index.html  main.js  style.css
js/: 2.6146d107.chunk.js  main.74ddfbcc.chunk.js.map  runtime-main.0aaae7da.js
nodejs/: package-lock.json  package.json
nodejs/public/: index.html  robots.txt
nodejs/src/: App.jsx  index.js
static/: index.html
static/board/: script.js
static/css/: main.48003a43.chunk.css  main.48003a43.chunk.css.map  main.601df5cb.chunk.css  main.601df5cb.chunk.css.map  main.7be77418.chunk.css  main.7be77418.chunk.css.map  main.c351304b.chunk.css  main.c351304b.chunk.css.map  main.da9063d6.chunk.css
static/js/: 2.4b7f9590.chunk.js  2.4b7f9590.chunk.js.map  2.8f1c6dcb.chunk.js  2.8f1c6dcb.chunk.js.map  2.9a49c356.chunk.js  2.9a49c356.chunk.js.map  2.bcf919b0.chunk.js  2.bcf919b0.chunk.js.map  2.d8a8f119.chunk.js  2.d8a8f119.chunk.js.map  2.fe71a229.chunk.js  2.fe71a229.chunk.js.map  main.096fbc8b.chunk.js  main.096fbc8b.chunk.js.map  (+31 more)
templates/: index.html  robots.txt
(+34 files in other folders)
